includes/css/style.css
@font-face {
 font-family: PlayfairDisplay-Regular;
 src: url("PlayfairDisplay-Regular.eot") /* EOT file for IE */
}
@font-face {
 font-family: PlayfairDisplay-Regular;
 src: url("PlayfairDisplay-Regular.ttf") /* TTF file for CSS3 browsers */
}
@font-face {
 font-family: PlayfairDisplay-Bold;
 src: url("PlayfairDisplay-Bold.eot") /* EOT file for IE */
}
@font-face {
 font-family: PlayfairDisplay-Bold;
 src: url("PlayfairDisplay-Bold.ttf") /* TTF file for CSS3 browsers */
}
@font-face {
 font-family: PlayfairDisplay-Italic;
 src: url("PlayfairDisplay-Italic.eot") /* EOT file for IE */
}
@font-face {
 font-family: PlayfairDisplay-Italic;
 src: url("PlayfairDisplay-Italic.ttf") /* TTF file for CSS3 browsers */
}
body {
  font-family: PlayfairDisplay-Regular, Verdana, Arial, sans-serif;
  font-size: 14px;
  line-height: 1.42857143;
  color: #797A7D;
  background-color: #fff;
  margin: 0;
  padding: 0;
}

.page-container{
	margin-top: -1px;
}

.navbar-header img {
	margin: 15px 0;
}
img.page-image{
	max-width: 100%;
}
.main-container {
	width: 70%;
	float: left;
}
.container-text{
	width: 30%;
	float: right;
	padding-right: 20px;
}
.footer-border{
	width: 100%;
	clear: both;
	background: url("../images/border.png") left top repeat-x;
}

.footer-table{
	width: 100%;
	padding-top: 50px;
	margin-bottom: 50px;
}
.table-left {
	width: 32%;
	text-align: center;
	display: inline-block;
  vertical-align: top;
}
.table-center{
	width: 32%;
	display: inline-block;
  vertical-align: top;
  padding-right: 40px;
}

.table-center h2{
  text-transform: uppercase;
}

.table-right{
	display: inline-block;
	width: 32%;
  vertical-align: top;
  font-family: PlayfairDisplay-Bold;
}

.table-right h2{
  font-family: PlayfairDisplay-Regular;
}

.table-right div{
	padding-top: 15px;
}

.contact-img-left{
	display: inline-block;
	vertical-align: bottom;
  width: 120px;
  max-width: 48%;
}
.contact-img-left img{
	width: 100px;
  max-width: 100%;
}
.contact-text-right{
	display: inline-block;
  width: 50%
}
.contact-text-right p{
  padding: 0;
  margin: 3px;
}
.floor-plans{
	border-left-image: url('../images/floor-border-left.png')
}
.mandatory-field{
  font-family: PlayfairDisplay-Italic;
  font-size: 0.8em;
}
.mandatory-field span{
  color: #ff0000;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
  display: block;
}
audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
[hidden],
template {
  display: none;
}
a {
  background: transparent;
}
a:active,
a:hover {
  outline: 0;
}
abbr[title] {
  border-bottom: 1px dotted;
}
b,
strong {
  font-weight: bold;
}
dfn {
  font-style: italic;
}
h1 {
  margin: .67em 0;
  font-size: 2em;
}
mark {
  color: #000;
  background: #ff0;
}
small {
  font-size: 80%;
}
sub,
sup {
  position: relative;
  font-size: 75%;
  line-height: 0;
  vertical-align: baseline;
}
sup {
  top: -.5em;
}
sub {
  bottom: -.25em;
}
img {
  border: 0;
}
svg:not(:root) {
  overflow: hidden;
}
figure {
  margin: 1em 40px;
}
hr {
  height: 0;
  -moz-box-sizing: content-box;
       box-sizing: content-box;
}
pre {
  overflow: auto;
}
code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
button,
input,
optgroup,
select,
textarea {
  margin: 0;
  font: inherit;
  color: inherit;
}
button {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}
button[disabled],
html input[disabled] {
  cursor: default;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
  padding: 0;
  border: 0;
}
input {
  line-height: normal;
}
input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}
input[type="search"] {
  -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
  -webkit-appearance: textfield;
}
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
fieldset {
  padding: .35em .625em .75em;
  margin: 0 2px;
  border: 1px solid #c0c0c0;
}
legend {
  padding: 0;
  border: 0;
}
textarea {
  overflow: auto;
}
optgroup {
  font-weight: bold;
}
table {
  border-spacing: 0;
  border-collapse: collapse;
}
td,
th {
  padding: 0;
}
@media print {
  * {
    color: #000 !important;
    text-shadow: none !important;
    background: transparent !important;
    box-shadow: none !important;
  }
  a,
  a:visited {
    text-decoration: underline;
  }
  a[href]:after {
    content: " (" attr(href) ")";
  }
  abbr[title]:after {
    content: " (" attr(title) ")";
  }
  a[href^="javascript:"]:after,
  a[href^="#"]:after {
    content: "";
  }
  pre,
  blockquote {
    border: 1px solid #999;

    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  img {
    max-width: 100% !important;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  select {
    background: #fff !important;
  }
  .navbar {
    display: none;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .btn > .caret,
  .dropup > .btn > .caret {
    border-top-color: #000 !important;
  }
  .label {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #ddd !important;
  }
}
* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
*:before,
*:after {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
/* ... */

